# tanki-game

./: Cargo.toml  Readme.md
examples/: game-ai.rs  сharacter-controller.rs
pancam/: Cargo.toml
physics-2d-plugin/: Cargo.toml
physics-2d-plugin/src/: lib.rs
src/: main.rs  systems.rs
src/first/: components.rs  mod.rs  objects.rs  systems.rs
src/main_menu/systems/: interactions.rs  layout.rs
src/pancam/: mod.rs
src/player/: components.rs  mod.rs  systems.rs
