[package]
name = "app-game"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3


[dependencies]
bevy = { version = "0.10.0", features = ["dynamic_linking"] }
bevy-inspector-egui = "0.18.1"
bevy_framepace = "0.12.1"
bevy_prototype_debug_lines = { version = "0.10.1" }
bevy_prototype_lyon = "0.8.0"
bevy_rapier2d = { version = "0.21.0", features = [ "simd-stable", "debug-render-2d" ] }
lyon = "1.0.1"
rand = "0.8.5"
